# arch-install

./: .gitignore  README.md  bootstrap.sh  chroot.sh  install.sh  lib.sh  post-install.sh  user-setup.sh
configs/bash/: bashrc.append
configs/dunst/: dunstrc
configs/fastfetch/: config.jsonc  logo.txt
configs/greetd/: config.toml
configs/gtk-3.0/: bookmarks  gtk.css  settings.ini
configs/gtk-4.0/: gtk.css
configs/hyprland/: hyprland.conf  hyprlock.conf  hyprpaper.conf  monitors.conf.example
configs/hyprlock/: hyprlock.conf
configs/hyprpaper/: hyprpaper.conf
configs/kde/: kdeglobals  kglobalshortcutsrc  klassyrc  kwinrc  layout.js  plasma-org.kde.plasma.desktop-appletsrc  plasmashellrc  powerdevilrc
configs/kitty/: kitty.conf
configs/mpd/: mpd.conf
configs/ncmpcpp/: config
configs/plasmalogin/: autologin.conf
configs/qt6ct/: qt6ct.conf
configs/quickshell/: SchemeTransition.qml  ShellGlobals.qml  Theme.qml  qmldir  shell.qml
configs/snapshot-boot/: snapshot-boot-entries.sh  zz-snapshot-boot.hook
configs/starship/: starship.toml
configs/waybar/: config.jsonc  style.css
welcome-app/: CMakeLists.txt  void-command-welcome.desktop
welcome-app/data/: apps.json  fixes.json  tweaks.json
welcome-app/qml/: Main.qml  Theme.qml
welcome-app/qml/components/: VcButton.qml  VcCard.qml  VcCategoryHeader.qml  VcProgressBar.qml  VcSearchBar.qml  VcTerminalOutput.qml  VcToggle.qml
welcome-app/qml/dialogs/: FixDialog.qml  InstallDialog.qml
welcome-app/qml/pages/: AboutPage.qml  AppsPage.qml  DisplayPage.qml  FixesPage.qml  TweaksPage.qml  WelcomePage.qml
welcome-app/src/: catalog.cpp  catalog.h  displaymanager.cpp  displaymanager.h  main.cpp  packagemanager.cpp  packagemanager.h  systeminfo.cpp  systeminfo.h  taskrunner.cpp  taskrunner.h  themewatcher.cpp  themewatcher.h
(+54 files in other folders)
